Closed Bug 1403259 Opened 7 years ago Closed 7 years ago

Crash in mozilla::layout::TextDrawTarget::StrokeGlyphs

Categories

(Core :: Graphics: WebRender, defect, P1)

58 Branch
Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox-esr52 --- unaffected
firefox55 --- unaffected
firefox56 --- unaffected
firefox57 --- unaffected
firefox58 --- fixed

People

(Reporter: calixte, Assigned: Gankra)

References

(Blocks 1 open bug)

Details

(Keywords: crash, regression, Whiteboard: [wr-mvp] [clouseau])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-3e54aab8-3cba-49c4-9026-653ac0170926.
=============================================================

There are 6 crashes in nightly 58 with buildid 20170926100259. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1400411.

[1] https://hg.mozilla.org/mozilla-central/rev?node=0d7f60023a1416ea4a7e9114faa52db5ca8968d2
Flags: needinfo?(a.beingessner)
Definitely that patch did it, intentionally. We're trying to shake loose cases that we're missing in webrender text.

Does anyone know what page triggers this?
Flags: needinfo?(a.beingessner)
Assignee: nobody → a.beingessner
Comment on attachment 8912351 [details]
Bug 1403259 - TextDrawTarget: fallback on -webrender-text-stroke.

https://reviewboard.mozilla.org/r/183680/#review188880
Attachment #8912351 - Flags: review?(jmuizelaar) → review+
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/7a77ab7e5e2e
TextDrawTarget: fallback on -webrender-text-stroke. r=jrmuizel
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/7a77ab7e5e2e
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Priority: -- → P1
Whiteboard: [clouseau] → [wr-mvp] [clouseau]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: