Bug 1403259 - TextDrawTarget: fallback on -webrender-text-stroke. r=jrmuizel

MozReview-Commit-ID: 9taTLk0RLQq